@@ -20,8 +20,16 @@
          basedir="."/>
   </target>
 
+  <target name="test5">
+    <mkdir dir="test5dir"/>
+    <tar tarfile="test5.tar"
+         basedir="."
+         includes="test5dir"/>
+  </target>
   
   <target name="cleanup"> 
     <delete file="test4.tar"/>
+    <delete file="test5.tar"/>
+    <delete dir="test5dir"/>
   </target>
 </project>
